# dist_calc_hw

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  hw1.postman_collection.json
auth/: .env  Cargo.toml  Dockerfile  out.txt
auth/migrations/2020-03-27-230406_create_users/: up.sql
auth/migrations/2020-04-06-124600_create_session/: up.sql
auth/migrations/2020-05-30-154317_last/: down.sql  up.sql
auth/src/: confirm.rs  errors.rs  handlers.rs  jwt.rs  main.rs  models.rs  schema.rs
migrations/2020-03-04-000847_create_products/: up.sql
notifications/: .env  Cargo.toml  Dockerfile
notifications/src/: main.rs
pb/: .env  Cargo.toml  build.rs
pb/src/: lib.rs
protos/: verification.proto
src/: db.rs  handlers.rs  main.rs  models.rs
store/: .env  Cargo.toml  Dockerfile
store/src/: auth.rs  handlers.rs  main.rs  models.rs  schema.rs
