[package]
name = "auth"
version = "0.1.0"
authors = ["Anton Rodionov <arodionov18@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
futures = "0.3.4"
derive_more = "0.99.3"
jsonwebtoken = "7.1.0"
bcrypt = "0.6.3"
diesel = {version = "1.4.4", features = ["postgres", "chrono"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
chrono = {version = "0.4.11", features = ["serde"]}
libreauth = "0.13.0"
amiquip = "0.3.3"