[package]
name = "notifications"
version = "0.1.0"
authors = ["Anton Rodionov <arodionov18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amiquip = "0.3.3"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
dotenv = "0.15.0"
lettre = "0.9.3"
lettre_email = "0.9.4"