[package]
name = "hw1"
version = "0.1.0"
authors = ["Anton Rodionov <arodionov18@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pb = {path = "../pb"}

actix = "0.9.0"
actix-rt = "1.0.0"
actix-web = "2.0.0"
log = "0.4.8"
env_logger = "0.7.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
diesel = {version = "1.4.4", features = ["postgres"]}
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
futures = "0.3.4"

tonic = "0.2"
prost = "0.6"


[build_dependencies]
tonic-build = "0.2"